# Archium-Agent

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tmp_m.txt  Archium项目审查报告.md  BENCHMARK_OVERFITTING_ANALYSIS.md  CANVAS_INTEGRATION_ANALYSIS.md  CASCADE_DELETE_FIX.md  CI_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  CONTENT_ADAPTATION_IMPROVEMENTS_SUMMARY.md  CONTENT_ADAPTATION_SAFETY_ANALYSIS.md  CONTRIBUTING.md  DECK_COMPOSITION_DELIVERY.md  DELIVERY_CHECKLIST.md  DOCKER_QUICK_TEST.md  Dockerfile.all-in-one  E2E_BENCHMARK_FIX_VERIFICATION.md  E2E_BENCHMARK_IMPLEMENTATION_ISSUES.md  E2E_BENCHMARK_IMPLEMENTATION_SUMMARY.md  GIT_COMMIT_GUIDE.md  HUMAN_REVIEW_EXECUTION_PLAN.md  LICENSE  NOTICE  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md  REPO_HYGIENE_SQLITE_WAL_FIX.md  RUFF_FIX_STRATEGY.md  SECURITY.md  STUDIO_INTERACTION_ROADMAP.md  _probe_mypy_missing.py  alembic.ini  app.py  cleanup_repo.bat  config.py  coverage.xml  (+17 more)
.cursor/rules/: agent-roster.mdc  archium-skills.mdc  repo-hygiene.mdc
.data/phase8/: phase8.db
.dev-notes/: README.md  _ci_candidates_import.txt  _ci_candidates_import_81205852098.txt  _ci_fail_c3eeaeb.txt  _ci_fail_latest.txt  _mypy_out.txt  _mypy_summary.txt  _screenshot_candidates_status.txt  extract_phase5.py  phase5-extract.txt  phase5-models.txt
.dev-notes/docs-history/: MIGRATION_CANDIDATES.md  README.md  phase35-real-reference-validation.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e-benchmark-nightly.yml  windows-smoke.yml
.tmp-audit-extract/: _extract3.py  assistant-222.md  assistant-240.md  assistant-270.md  assistant-302.md  assistant-313.md  assistant-336.md  assistant-344.md  assistant-353.md  assistant-355.md  extra-259.md  line-017.md  line-033.md  line-043.md  line-055.md  line-067.md  line-084.md  line-102.md  line-135.md  line-155.md  line-169.md  line-184.md  line-199.md  user-001.md
.venv-sec-audit/: pyvenv.cfg
.venv-sec-audit/Scripts/: activate  activate.bat
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_lineage_artifacts.py  003_fact_conflict_group.py  004_review_layer.py  005_review_issue_rule_code.py  006_review_issue_rule_code_index.py  007_visual_qa_reports_and_review_metadata.py  008_project_mission_planning.py  009_workstream_recommendation_reason.py  010_planning_session_decouple.py  011_visual_composition.py  012_project_knowledge.py  013_outline_plans.py  014_cultural_narrative_plans.py  015_renovation_issue_maps.py  016_reference_style_profiles.py  017_render_scenes.py  018_architectural_templates.py  019_presentation_manuscripts.py  020_scene_change_proposals.py  021_storyline_narrative_arc.py  022_deck_delivery_status.py  023_outline_page_intents.py  024_outline_page_asset_bindings.py  025_delivery_records.py  026_outline_approval_records.py  027_outline_page_design_briefs.py  028_delivery_round_trip_report.py  029_element_comments.py  030_theme_change_proposals.py  031_element_comment_scene_binding.py  032_element_comment_scope.py  033_template_usage_briefs.py  034_project_mission_narrative_mode.py  035_project_mission_approval_hash.py  036_delivery_artifact_lineage.py  037_fact_alternate_values.py  038_slide_visual_grammar.py  039_project_origin_design_intent.py  040_artifact_jobs.py  (+6 more)
archium/: __init__.py  bootstrap.py  cli.py  exceptions.py  logging.py
archium-agent-skills/: README.md
archium-agent-skills/apply-studio-comments/: SKILL.md
archium-agent-skills/architectural-presentation-authoring/: SKILL.md
archium-agent-skills/campus-renovation-report/: SKILL.md
archium-agent-skills/drawing-page-design/: SKILL.md
archium-agent-skills/executive-summary-writing/: SKILL.md
archium-agent-skills/hospital-renovation-report/: SKILL.md
docs/: COMPLETE_DELIVERY_SUMMARY.md  QUALITY_GATE_STATUS.md  README.md  README_UPDATE_SUMMARY.md  SESSION_SUMMARY_2026-07-20.md  architect-usability-test.md  beta-platform-support-matrix.md  branch-protection.md  ci-critical-coverage.md  ci-security-audit.md  configuration-reference.md  cross-platform-validation.md  documentation-audit-2026-07-23.md  documentation-maintenance.md  enhanced_deck_composition_guide.md  enhanced_nlp_parsing.md  historical-document-inventory.md  project-mission-adaptive-planning.md  real-project-validation-preparation.md  release-capability-matrix.md  studio-current-capabilities.md  studio-user-guide.md  user-task-playbooks.md  v0.2-alpha-validation-sprint.md  v0.2-beta-backlog.md  v0.2-beta-rehearsal-facilitator-checklist.md  v0.2-beta-rehearsal-participant-guide.md  v0.2-beta-rehearsal.md  v0.2-beta-release-decision.md
legacy/: __init__.py  config.py  file_manager.py  main.py  ppt_generator.py
requirements/: README.md
scripts/: _tmp_dom009.py  approve_layout_pptx_screenshot_baselines.py  bootstrap_phase4_benchmark_artifacts.py  build_architectural_benchmark_report.py  calibrate_visual_qa.py  check_markdown_links.py  ci_critical_coverage_gate.py  ci_nightly_rendered_visual_gate.py  ci_security_audit_gate.py  ci_security_audit_gate.sh  ci_setup_screenshot_fonts.sh  ci_verify_local.ps1  compile_requirement_locks.py  eval_mission_live.py  export_benchmark_human_reviews.py  generate_benchmark_pptx_renders.py  generate_config_docs.py  invalidate_benchmark_human_reviews.py  materialize_benchmark_curated_assets.py  materialize_cultural_village_files.py  materialize_renovation_files.py  new_beta_session.py  new_playbook_f_session.py  normalize_benchmark_scene_uris.py  record_llm_cache.py  render_architectural_benchmark.py  render_architectural_benchmark_visuals.py  run_co_plan_template_editing_e2e.py  run_phase35_reference_validation.py  run_phase4_review_manifest.py  run_phase4_template_publication.py  run_phase8_real_projects.py  run_playbook_a_gate.py  run_playbook_f_gate.py  run_playbook_f_rehearsal.py  run_real_project_acceptance.py  seed_visual_qa_corpus.py  setup_branch_protection.ps1  setup_branch_protection.sh  summarize_beta_rehearsal.py  (+6 more)
tests/: conftest.py
(+2160 files in other folders)
