[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archium-agent"
version = "0.2.0a5"
description = "Archium — intelligent architectural presentation production tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Archium Team" }]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.32.0", "keyring>=25.0.0", "alembic>=1.13"]
documents = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
]
workflow = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
]
vector = ["chromadb>=0.5"]
llm = ["openai>=1.0.0"]
full = [
    "streamlit>=1.32.0",
    "keyring>=25.0.0",
    "alembic>=1.13",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "chromadb>=0.5",
    "openai>=1.0.0",
]
legacy = []
dev = [
    "alembic>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "types-Pillow",
]

[project.scripts]
archium = "archium.cli:main"
archium-legacy = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["archium*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "default::DeprecationWarning:archium",
]
markers = [
    "smoke: End-to-end smoke tests (PptxGenJS, Marp CLI, migrations, Streamlit)",
    "marp_smoke: Marp CLI export smoke tests",
    "migration_smoke: Alembic migration smoke tests",
    "streamlit_smoke: Streamlit startup smoke tests",
    "calibration: Visual QA labeled corpus calibration (optional, not in default CI)",
    "visual_regression: PNG preview baseline checks for key Golden Cases (requires Marp CLI)",
    "windows_smoke: Windows real-machine smoke (PptxGen, checkpoint, Unicode paths; windows-smoke.yml)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["archium", "tests", "config.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
packages = ["archium"]

[[tool.mypy.overrides]]
module = ["main", "app", "config", "ppt_generator", "file_manager"]
ignore_errors = true

# chromadb → numpy ships 3.12-only stub syntax; skip third-party follow-imports.
[[tool.mypy.overrides]]
module = ["chromadb", "chromadb.*", "numpy", "numpy.*"]
follow_imports = "skip"
