[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archium-agent"
version = "0.2.0a5"
description = "Archium — intelligent architectural presentation production tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Archium contributors" }]
keywords = [
    "architecture",
    "presentation",
    "llm",
    "streamlit",
    "langgraph",
    "planning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/Theopote/Archium-Agent"
Repository = "https://github.com/Theopote/Archium-Agent"
Issues = "https://github.com/Theopote/Archium-Agent/issues"
Documentation = "https://github.com/Theopote/Archium-Agent/tree/main/docs"
Changelog = "https://github.com/Theopote/Archium-Agent/releases"

[project.optional-dependencies]
ui = ["streamlit>=1.32.0", "keyring>=25.0.0", "alembic>=1.13"]
documents = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
]
workflow = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
]
vector = ["chromadb>=0.5"]
llm = ["openai>=1.0.0"]
full = [
    "streamlit>=1.32.0",
    "keyring>=25.0.0",
    "alembic>=1.13",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "chromadb>=0.5",
    "openai>=1.0.0",
    "psycopg[binary]>=3.1",
]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "alembic>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff==0.15.22",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "types-Pillow",
]

[project.scripts]
archium = "archium.cli:main"
archium-legacy = "legacy.main:main"
archium-build-canvas = "archium.ui.components.canvas_editor.build_frontend:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["archium*", "legacy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "default::DeprecationWarning:archium",
]
markers = [
    "unit: Fast isolated tests (tests/unit, tests/application); CI job: pytest -m unit",
    "integration: Service wiring tests (tests/integration); CI job: pytest -m \"integration and not e2e\"",
    "e2e: Full workflow gates (nightly); excluded from PR integration via \"not e2e\"",
    "e2e_pipeline: Nightly deliverable pipeline gate; may bypass in-workflow layout validation",
    "e2e_quality: Nightly layout quality gate; real LayoutValidationService only",
    "benchmark: Architectural slide benchmark suite (tests/benchmark); CI job: pytest -m benchmark",
    "smoke: Toolchain smoke tests (tests/smoke); CI jobs run pytest -m smoke",
    "marp_smoke: Marp CLI export smoke tests",
    "migration_smoke: Alembic migration smoke tests",
    "streamlit_smoke: Streamlit startup smoke tests",
    "calibration: Visual QA labeled corpus calibration (optional, not in default CI)",
    "visual_regression: PNG preview baseline checks for key Golden Cases (requires Marp CLI)",
    "architectural_benchmark: Architectural slide visual benchmark cases (LayoutPlan + PNG baselines)",
    "real_project_acceptance: Five desensitized real-project end-to-end acceptance scenarios",
    "phase7_acceptance: Phase 7 cultural village and renovation acceptance scaffolds",
    "phase8_artifacts: Phase 8 real-project RenderScene deliverable artifact pipelines",
    "windows_smoke: Windows real-machine smoke (PptxGen, checkpoint, Unicode paths; windows-smoke.yml)",
    "requires_libreoffice: Needs LibreOffice+pdftoppm or Windows PowerPoint for PPTX page screenshots",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["archium", "legacy", "tests", "config.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
packages = ["archium"]

[[tool.mypy.overrides]]
module = ["main", "app", "config", "ppt_generator", "file_manager"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["legacy", "legacy.*"]
ignore_errors = true

# chromadb → numpy ships 3.12-only stub syntax; skip third-party follow-imports.
[[tool.mypy.overrides]]
module = ["chromadb", "chromadb.*", "numpy", "numpy.*"]
follow_imports = "skip"
